--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
   "engines": {
     "node": ">=18.15.0",
     "npm": ">=9.5.0"
+  },
+  {
+    "overrides": {
+      "glob": "10.3.10"
+    },
   }
+
 }
